# cadence_netlist_format

./: .coveragerc  .gitignore  Makefile  Makefile.pkg.mk  README.md  pyproject.toml  setup.py
cadence_netlist_format/: commandlinearg.py  main.py
examples/: README.md  diff_netlist.sh
src/cadence_netlist_format/: __init__.py  allegronetlist.py  cadence_netlist_format.py  commandlinearg.py  configfile.py  main.py
test/: NetList.rpt  NetList2compare_simple2.rpt  README.md
tests/: conftest.py
tests/data/expected/: netlist_v1_expected.rpt  netlist_v2_expected.rpt  netlist_v3_expected.rpt
tests/integration/: test_regression.py
tests/unit/: test_allegronetlist.py  test_cadence_netlist_format.py  test_commandlinearg.py  test_configfile.py  test_version.py
