[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadence_netlist_format"
version = "2.0.2"
description = "CLI to format Cadence Allegro Netlist to readable file"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Yuriy VG", email = "yuravg@gmail.com"}
]

[project.urls]
"Homepage" = "https://github.com/yuravg/cadence_netlist_format"

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "build>=0.7",
    "wheel",
    "tomli>=2.0.0; python_version >= '3.10' and python_version < '3.11'",
]

# This creates an executable command called 'cnl_format'
# that calls the main() function in cadence_netlist_format module
[project.scripts]
cnl_format = "cadence_netlist_format.main:main"

# Setuptools-specific configuration
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["cadence_netlist_format*"]

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "regression: Regression tests against reference netlists",
    "slow: Tests that take longer to execute",
]
# Minimum Python version for testing
minversion = "7.0"
